Ajout d'Open Graph et Twitter Cards

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index, follow">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" href="./css/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,18 +25,36 @@
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
 			"addressLocality": "Bordeaux",
-			"postalCode": "33200"
+			"postalCode": "33200",
+			"addressCountry": "FR"
 		  },
 		  "telephone": "+33556677889",
 		  "openingHours": [
 			"Mo-Fr 10:00-19:00"
+		  ],
+		  "pricerange": "50€-400€",
+		  "image": [
+			"https://ninacarducci.github.io/assets/images/nina-carducci-portrait.webp"
 		  ]
 		}
-	</script>	
+	</script>
+	<meta property="og:site_name" content="Nina Carducci">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://ninacarducci.github.io/">
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux et en Île-de-France">
+	<meta property="og:description" content="Découvrez l'univers de Nina Carducci, photographe à Bordeaux et en Île-de-France. Parcourez son portfolio et contactez-la pour des souvenirs intemporels.">
+	<meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina-carducci-portrait.webp">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux et en Île-de-France">
+	<meta name="twitter:description" content="Découvrez l'univers de Nina Carducci, photographe à Bordeaux et en Île-de-France. Parcourez son portfolio et contactez-la pour des souvenirs intemporels.">
+	<meta name="twitter:image" content="https://ninacarducci.github.io/assets/images/nina-carducci-portrait.webp">
+	<meta name="twitter:url" content="https://ninacarducci.github.io/">
 </head>
 <body>
 <main>
-	<header class="top-header" role="banner">
+	<header class="top-header">
 		<h1 class="name">Nina Carducci</h1>
 		<nav class="nav">   
 			<ul>
@@ -179,7 +198,7 @@
 		</div>
 	</section>
 </main>
-<footer role="contentinfo">
+<footer>
     <p>© 2024 Nina Carducci. Tous droits réservés.</p>
     <address>
         <p>Mon adresse : 68 avenue Alsace-Lorraine, 33200 Bordeaux.</p>
