minification du js

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux et en Île-de-France</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha512-bnIvzh6FU75ZKxp0GXLH9bewza/OIw6dLVh9ICg0gogclmYGguQJWl8U30WpbsGTqbIiAwxTsbe76DErLq5EDQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-	<script src="./js/maugallery.js" defer></script>
-	<script src="./js/scripts.js" defer></script>
+	<script src="./js/maugallery.min.js" defer></script>
+	<script src="./js/scripts.min.js" defer></script>
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
