Ajustements sur l'affichage en version mobile

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 				<li><a href="#gallery">Galerie</a></li>
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a class="instagram-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Logo Instagram"></a></li>
-				<li><a class="facebook-link" href="https://www.facebook.com/people/Nina-Carducci/pfbid0BHDvzDrHjpq6EtMJisMi1DBDrrtyt6wsiXd2zKkTcZZyXiUTbn7t2i13PRCe31mUl/" target="_blank"><img src="assets/images/facebook-logo.webp" alt="Logo Facebook"></a></li>
 			</ul>
+				<div class="social-links">
+					<a class="instagram-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-logo.webp" alt="Logo Instagram"></a>
+					<a class="facebook-link" href="https://www.facebook.com/people/Nina-Carducci/pfbid0BHDvzDrHjpq6EtMJisMi1DBDrrtyt6wsiXd2zKkTcZZyXiUTbn7t2i13PRCe31mUl/" target="_blank"><img src="assets/images/facebook-logo.webp" alt="Logo Facebook"></a>
+				</div>
 		</nav>
 	</header>
 	<div>
@@ -202,7 +204,7 @@
     <p>© 2024 Nina Carducci. Tous droits réservés.</p>
     <address>
         <p>Mon adresse : 68 avenue Alsace-Lorraine, 33200 Bordeaux.</p>
-        <p>Mon numéro de téléphone : <a href="tel:+33556677889">05 56 67 78 89</a></p>
+        <p>Mon numéro de téléphone :<br><a href="tel:+33556677889">05 56 67 78 89</a></p>
         <p>Je réponds au téléphone du lundi au vendredi de 10 h à 19 h.</p>
     </address>
 </footer>
