--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
 	<link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
 	<meta name="description" content="Découvrez l'univers de Nina Carducci, photographe à Bordeaux et en Île-de-France. Parcourez son portfolio et contactez-la pour des souvenirs intemporels.">
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux et en Île-de-France</title>
@@ -81,10 +81,10 @@
 					<img src="./assets/images/slider/crosswalk-ryoji-iwata.webp" class="d-block w-100" alt="Homme traversant au passage piéton" title="crosswalk-ryoji-iwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/concert-nicholas-green.webp" class="d-block w-100" alt="Jeunes avec les mains en l'air pendant un concert" title="concert-nicholas-green">
+					<img src="./assets/images/slider/concert-nicholas-green.webp" class="d-block w-100" alt="Jeunes avec les mains en l'air pendant un concert" title="concert-nicholas-green" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/wedding-edward-cisneros.webp" class="d-block w-100" alt="Homme embrassant la mariée" title="wedding-edward-cisneros">
+					<img src="./assets/images/slider/wedding-edward-cisneros.webp" class="d-block w-100" alt="Homme embrassant la mariée" title="wedding-edward-cisneros" loading="lazy">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Previous">
@@ -99,7 +99,7 @@
 	</div>
 	<section id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina-carducci-portrait.webp" alt="Portait de Nina Carducci" title="nina-carducci-portrait">
+			<img src="./assets/images/nina-carducci-portrait.webp" alt="Portait de Nina Carducci" title="nina-carducci-portrait" loading="lazy">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -112,15 +112,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-awesome-concert.webp" alt="Foule dans une salle de concert" title="aaron-paul-awesome-concert">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-professional-picture.webp" alt="Photo professionnelle d'un homme en costume" title="ali-morshedlou-professional-picture">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-office-meeting-laughing.webp" alt="Photo d'une réunion d'entreprise où les employés semblent s'amuser" title="jason-goodman-office-meeting-laughing">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-engaged-holding-hands.webp" alt="Photo de fiancés se tendant les mains" title="hannah-busing-engaged-holding-hands">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-man-portrait-eyes-closed.webp" alt="Protrait d'un homme qui ferme les yeux" title="ade-tunji-man-portrait-eyes-closed">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-weddin-palm-tree.webp" alt="Photo d'un mariage avec un palmier en arrière-plan" title="jakob-owens-weddin-palm-tree">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-young-female-wearing-glasses.webp" alt="Photo d'une jeune femme qui porte des lunettes derrière un grillage" title="nino-van-prattenburg-young-female-wearing-glasses">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-singer-abstract-smoke.webp" alt="Photo artistique d'un chateur durant un concert" title="austin-neill-singer-abstract-smoke">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-office-employee-laughing.webp" alt="Photo d'une employée de bureau qui rit" title="mateus-campos-felipe-office-employee-laughing">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-awesome-concert.webp" alt="Foule dans une salle de concert" title="aaron-paul-awesome-concert" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-professional-picture.webp" alt="Photo professionnelle d'un homme en costume" title="ali-morshedlou-professional-picture" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-office-meeting-laughing.webp" alt="Photo d'une réunion d'entreprise où les employés semblent s'amuser" title="jason-goodman-office-meeting-laughing" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-engaged-holding-hands.webp" alt="Photo de fiancés se tendant les mains" title="hannah-busing-engaged-holding-hands" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-man-portrait-eyes-closed.webp" alt="Protrait d'un homme qui ferme les yeux" title="ade-tunji-man-portrait-eyes-closed" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-weddin-palm-tree.webp" alt="Photo d'un mariage avec un palmier en arrière-plan" title="jakob-owens-weddin-palm-tree" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-young-female-wearing-glasses.webp" alt="Photo d'une jeune femme qui porte des lunettes derrière un grillage" title="nino-van-prattenburg-young-female-wearing-glasses" loading="lazy">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-singer-abstract-smoke.webp" alt="Photo artistique d'un chateur durant un concert" title="austin-neill-singer-abstract-smoke" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-office-employee-laughing.webp" alt="Photo d'une employée de bureau qui rit" title="mateus-campos-felipe-office-employee-laughing" loading="lazy">
 			</div>
 		</div>
 		<div class="quote">
@@ -195,7 +195,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera-close-up.webp" alt="Photo en gros plan d'un appareil photo" title="camera-close-up">
+				<img src="./assets/images/camera-close-up.webp" alt="Photo en gros plan d'un appareil photo" title="camera-close-up" loading="lazy">
 			</div>
 		</div>
 	</section>
