Implémentation de la navigation tabindex

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 					<img src="./assets/images/slider/wedding-edward-cisneros.webp" class="d-block w-100" alt="Homme embrassant la mariée" title="wedding-edward-cisneros" loading="lazy">
 				</div>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Previous">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" tabindex="0" aria-label="Previous">
+				<span class="carousel-control-prev-icon"></span>
 				<span class="visually-hidden">Previous</span>
 			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" aria-label="Next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" tabindex="0" aria-label="Next">
+				<span class="carousel-control-next-icon"></span>
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
@@ -112,15 +112,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-awesome-concert.webp" alt="Foule dans une salle de concert" title="aaron-paul-awesome-concert" loading="lazy">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-professional-picture.webp" alt="Photo professionnelle d'un homme en costume" title="ali-morshedlou-professional-picture" loading="lazy">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-office-meeting-laughing.webp" alt="Photo d'une réunion d'entreprise où les employés semblent s'amuser" title="jason-goodman-office-meeting-laughing" loading="lazy">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-engaged-holding-hands.webp" alt="Photo de fiancés se tendant les mains" title="hannah-busing-engaged-holding-hands" loading="lazy">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-man-portrait-eyes-closed.webp" alt="Protrait d'un homme qui ferme les yeux" title="ade-tunji-man-portrait-eyes-closed" loading="lazy">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-weddin-palm-tree.webp" alt="Photo d'un mariage avec un palmier en arrière-plan" title="jakob-owens-weddin-palm-tree" loading="lazy">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-young-female-wearing-glasses.webp" alt="Photo d'une jeune femme qui porte des lunettes derrière un grillage" title="nino-van-prattenburg-young-female-wearing-glasses" loading="lazy">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-singer-abstract-smoke.webp" alt="Photo artistique d'un chateur durant un concert" title="austin-neill-singer-abstract-smoke" loading="lazy">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-office-employee-laughing.webp" alt="Photo d'une employée de bureau qui rit" title="mateus-campos-felipe-office-employee-laughing" loading="lazy">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-awesome-concert.webp" alt="Foule dans une salle de concert" title="aaron-paul-awesome-concert" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-professional-picture.webp" alt="Photo professionnelle d'un homme en costume" title="ali-morshedlou-professional-picture" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-office-meeting-laughing.webp" alt="Photo d'une réunion d'entreprise où les employés semblent s'amuser" title="jason-goodman-office-meeting-laughing" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-engaged-holding-hands.webp" alt="Photo de fiancés se tendant les mains" title="hannah-busing-engaged-holding-hands" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-man-portrait-eyes-closed.webp" alt="Protrait d'un homme qui ferme les yeux" title="ade-tunji-man-portrait-eyes-closed" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-weddin-palm-tree.webp" alt="Photo d'un mariage avec un palmier en arrière-plan" title="jakob-owens-weddin-palm-tree" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg-young-female-wearing-glasses.webp" alt="Photo d'une jeune femme qui porte des lunettes derrière un grillage" title="nino-van-prattenburg-young-female-wearing-glasses" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-singer-abstract-smoke.webp" alt="Photo artistique d'un chateur durant un concert" title="austin-neill-singer-abstract-smoke" tabindex="0" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-office-employee-laughing.webp" alt="Photo d'une employée de bureau qui rit" title="mateus-campos-felipe-office-employee-laughing" tabindex="0" loading="lazy">
 			</div>
 		</div>
 		<div class="quote">
